Archive2/39/8bc3afb4437f03/output
main.cpp:1:1: error: 'http' does not name a type
 http://stackoverflow.com/questions/20338247/string-iterator-incompatible-for-reading-eachline/20339694#20339694
 ^
